# computergrafik_hausarbeit

./: .gitignore  CMakeLists.txt  CMakeSettings.json
assets/: fsterrain.glsl
assets/models/tank/: tank_bottom.dae  tank_top.dae
assets/shader/terrain/: terrainFragmentShader.glsl  terrainVertexShader.glsl
libraries/assimp/include/assimp/: DefaultLogger.hpp  Exporter.hpp  IOStream.hpp  IOSystem.hpp  Importer.hpp  LogStream.hpp  Logger.hpp  NullLogger.hpp  ProgressHandler.hpp  ai_assert.h  anim.h  camera.h  cexport.h  cfileio.h  cimport.h  color4.h  color4.inl  config.h  defs.h  importerdesc.h  light.h  material.h  material.inl  matrix3x3.h  matrix3x3.inl  matrix4x4.h  matrix4x4.inl  mesh.h  metadata.h  postprocess.h  quaternion.h  quaternion.inl  scene.h  texture.h  types.h  vector2.h  vector2.inl  vector3.h  vector3.inl  version.h
libraries/assimp/include/assimp/Compiler/: pstdint.h
libraries/assimp/include/assimp/port/AndroidJNI/: AndroidJNIIOSystem.h
libraries/freeimage/include/: FreeImage.h
libraries/glew/include/GL/: eglew.h  glew.h  glxew.h  wglew.h
libraries/glfw/include/GLFW/: glfw3.h  glfw3native.h
src/: Application.cpp  Application.h  main.cpp
src/buffer/: VertexBuffer.h
src/camera/: Camera.h
src/framework/buffer/: IndexBuffer.h  VertexBuffer.cpp  VertexBuffer.h
src/framework/camera/: Camera.h
src/framework/model/: BaseModel.h  LinePlaneModel.h  Model.cpp  Model.h  Scene.cpp  Scene.h
src/framework/shader/: BaseShader.h  ConstantShader.cpp  ConstantShader.h  PhongShader.cpp  PhongShader.h  TerrainShader.cpp
src/framework/texture/: Texture.h  rgbimage.cpp
src/framework/util/: CGUtilities.cpp  CGUtilities.h
src/game/: Application.cpp  Application.h  GameCamera.cpp  GameCamera.h  KeyManager.cpp  KeyManager.h  PlayerCar.cpp  PlayerCar.h
src/game/gui/: Fonts.cpp  Fonts.h  Holder_test.cpp  LoosingGUI.cpp  LoosingGUI.h  ShowText.cpp  ShowText.h
src/game/player/: PlayerPositionService.h  Tank.cpp  Tank.h
src/game/shader/: GUIShader.cpp  GUIShader.h  TerrainShader.cpp  TerrainShader.h
src/game/terrain/: Terrain.cpp  Terrain.h  TerrainChunk.cpp  TerrainChunk.h
src/game/terrain/renderer/: FlatGraph.h  GraphService.h  PerlinGraph.cpp
src/game/util/: GameCamera.cpp  GameCamera.h  KeyManager.cpp  KeyManager.h
src/game/world/: FlatGraph.cpp  FlatGraph.h  GraphService.h  PerlinGraph.cpp  PerlinGraph.h  SinusGraph.cpp  SinusGraph.h  Terrain.cpp  Terrain.h  TerrainChunk.cpp  TerrainChunk.h  TerrainControlService.h  TerrainManager.cpp  TerrainManager.h
src/game/world/renderer/: FlatGraph.cpp  PerlinGraph.cpp  SinusGraph.cpp  SinusGraph.h
src/model/: BaseModel.h  LineBoxModel.cpp  LineBoxModel.h  LinePlaneModel.h  Model.cpp  Model.h  ProzeduralTerrain.cpp  ProzeduralTerrain.h  Terrain.cpp  Terrain.h  TriangleBoxModel.cpp  TriangleBoxModel.h  TrianglePlaneModel.h  TriangleSphereModel.h
src/object/: Tank.cpp  Tank.h
src/shader/: BaseShader.cpp  BaseShader.h  ConstantShader.cpp  ConstantShader.h  PhongShader.h  TerrainShader.cpp  TerrainShader.h
src/texture/: Texture.cpp  Texture.h  color.cpp  color.h  rgbimage.h
src/util/: CGUtilities.h  vector.cpp
